# BeebEm-for-Android

./: .gitignore  PLAN.md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/BeebData/: Econet.cfg  Phroms.cfg  Preferences.cfg  Roms.cfg
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/: 6502core.cpp  6502core.h  ARMulator.h  Arm.cpp  Arm.h  ArmDisassembler.cpp  AtoDConv.cpp  AtoDConv.h  AviWriter.cpp  AviWriter.h  BeebEmPages.cpp  BeebEmPages.h  BeebMem.cpp  BeebMem.h  BeebWin.cpp  BeebWin.h  BeebWinIo.cpp  BeebWinPrefs.cpp  BeebWinPrefs.h  BeebWinSpeech.cpp  ComboBox.cpp  ComboBox.h  Csw.cpp  Debug.cpp  Debug.h  DebugTrace.cpp  Dialog.cpp  Disc1770.cpp  Disc1770.h  Disc8271.cpp  DiscEdit.cpp  DiscInfo.cpp  DiscInfo.h  Econet.cpp  Econet.h  ExportFileDialog.h  Ext1770.cpp  Ext1770.h  FileDialog.cpp  FileDialog.h  (+78 more)
app/src/main/cpp/core/ARMulator/: ansidecl.h  armdefs.h  armopts.h  armstubs.cpp  armsupp.cpp  thumbemu.cpp
app/src/main/cpp/jni/: beebem_jni.cpp
app/src/main/cpp/platform/: BeebEmPages.h  Main.h  Sdl.h  Windows.h  android_assets.cpp  android_audio_aaudio.cpp  android_beebpages.cpp  android_beebwin.cpp  android_internal.h  android_main.cpp  android_platform.cpp  android_windows.cpp  commctrl.h  shlobj.h  windowsx.h
app/src/main/cpp/platform/macos/: MacMain.h  MacPlatform.h
app/src/main/java/uk/org/beebem/android/: BbcKeyboard.kt  BbcMicroSearch.kt  BbcSearchScreen.kt  BeebEmNative.kt  BeebGLSurfaceView.kt  DiscManager.kt  GameCatalogue.kt  GamePickerScreen.kt  HardwareKeyMap.kt  JoypadConfig.kt  JoypadScreen.kt  MainActivity.kt  StateManager.kt  StatePickerScreen.kt
app/src/main/java/uk/org/beebem/android/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml
